@@ -14,7 +14,7 @@
     "white_depth": 20,
     "note_depth": 1000,
     "min_tags": 100,
-    "force_sum": true,
+    "hash_life": 10,
     "add_tags": true,
     "add_tags_depth": 10,
     "debug_output": false,
