@@ -1,8 +1,10 @@
 package me.boops;
 
+import me.boops.cache.Cache;
 import me.boops.cache.Config;
 import me.boops.functions.FindPost;
 import me.boops.functions.OnlineCheck;
+import me.boops.functions.UpdateQueueCache;
 import me.boops.logger.Logger;
 import pw.frgl.jumblr.BlogInfo;
 
@@ -22,6 +24,10 @@ public class Main {
 		Config Conf = new Config();
 		Logger logger = new Logger();
 		BlogInfo blog = new BlogInfo(Conf.getCustomerKey(), Conf.getCustomerSecret(), Conf.getToken(), Conf.getTokenSecret());
+		UpdateQueueCache cache = new UpdateQueueCache();
+		
+		//QueueCache Life Time
+		int QueueCacheLife = 0;
 		
 		// EndLess Loop!
 		while (true) {
@@ -36,6 +42,7 @@ public class Main {
 					logger.Log("Updating Queue Count!", 0, false);
 					logger.Log("Currently " + blog.getQueueCount() + " Posts In Queue!", 0, false);
 					logger.Log("Building queue hash cache", 0, false);
+					cache.getQueueCache();
 				} else {
 
 					// Not Online
@@ -49,6 +56,13 @@ public class Main {
 
 				if (blog.getQueueCount() < Conf.getQueueSize()) {
 					logger.Log("Trying To Queue Another Post", 0, false);
+					QueueCacheLife++;
+					if(QueueCacheLife >= Conf.getHashLife()){
+						logger.Log("Rebuilding queue hash cache", 0, false);
+						Cache.QueueHashes.clear();
+						cache.getQueueCache();
+						QueueCacheLife = 0;
+					}
 					new FindPost();
 				} else {
 					logger.Log("Waiting " + Conf.getPostSpeed() + " Sec Before Trying Again", 0, false);
