@@ -1,0 +1,12 @@
+package me.boops.cache;
+
+import java.util.ArrayList;
+import java.util.List;
+
+public class Cache {
+	
+	//Queue Caching
+	public static List<String> QueueHashes = new ArrayList<String>();
+	public static String CurrentPostHash = "";
+	
+}
